--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -9,5 +9,9 @@
     <h1>Abraham-trigs</h1>
     <h2>When I started Coding</h2>
     <h3>The very first day</h3>
+    <p>This is the portfolio about <em>Abraham-trigs</em></p>
+    <p>Click <a href="youtube">here</a> to watch live vidoes about </p>
+    <p>or send as an email through this <a href="youtube.com">link</a></p>
+    <p>Feel freeto share</p>
 </body>
 </html>
