image was added to index.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -9,6 +9,7 @@
     <h1>Abraham-trigs</h1>
     <h2>When I started Coding</h2>
     <h3>The very first day</h3>
+   <a href="youtube.com" target="_blank"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""></a>
     <p>This is the portfolio about <em>Abraham-trigs</em></p>
     <p>Click <a href="youtube">here</a> to watch live vidoes about </p>
     <p>or send as an email through this <a href="youtube.com">link</a></p>
