--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -11,5 +11,7 @@
         <a href="https://t.co/ZG9VCEDm3D">pic.twitter.com/ZG9VCEDm3D</a></p>&mdash; Abraham-trigs (@trigs_98) 
         <a href="https://twitter.com/trigs_98/status/1335627812288552961?ref_src=twsrc%5Etfw">December 6, 2020</a>
     </blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    
+    <a href="index.html"><button type="submit">Home page</button></a>
 </body>
 </html>
