--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -28,6 +28,7 @@
             <a href="index.html"><button type="submit">Home page</button></a>
         </article>
         <aside>
+            <p> “placeholder to add comment thread later”</p>
 
         </aside>
     </main>
