table add to article tag

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -35,26 +35,28 @@
     <p>Feel freeto share</p>
         </section>
 
-        <table>
-            <thead>
-                <th>name</th>
-                <th>Age</th>
-                <th>Country</th>
-            </thead>
-
-            <tbody>
-                <tr>
-                    <td>John</td>
-                    <td>25</td>
-                    <td>USA</td>
-                </tr>
-                <TR>
-                    <td>Emily</td>
-                    <td>28</td>
-                    <td>Canada</td>
-                </TR>
-            </tbody>
-        </table>
+        <article>
+            <table>
+                <thead>
+                    <th>name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                </thead>
+    
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <TR>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </TR>
+                </tbody>
+            </table>
+        </article>
 
       
     </main>
