index.html under html_basic directory update to meet requirement

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -33,10 +33,6 @@
             <section class="intro-positioner">
               <div id="intro">
                 <div id="intro-text">
-                  <!-- <div class="greet">
-                    <h2> Helloo World,</h2>
-                  </div> -->
-    
                   <h1 class="name-text">Abraham-Trigs Bortey Danfa</H1>
                     <article>
 
@@ -73,8 +69,12 @@
       <article id="down-section">
         <img src="artwork samples.png" alt="qr-code">
         <p>
-          If you’re looking for someone who is self-motivated, adaptable, and committed to delivering top-notch, client-focused results, I’d love to connect, join, and contribute to your team or project. With these skills, I’m also ready to learn more.
+          If you’re looking for someone who is self-motivated, adaptable, and committed to delivering top-notch, client-focused results, I’d love to connect, join, and contribute to your team or project. 
         </p>
+        <p>With these skills, I’m also ready to </p>
+        <p>learn more.</p>
+        
+
       </article>
 
       <aside>
