same file as previous commit updated

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -21,6 +21,7 @@
           <li><a href="./tweets.html">Tweet</a></li>
         </ul>
       </nav>
+
     </header>
 
     <main>
@@ -33,10 +34,7 @@
             <section class="intro-positioner">
               <div id="intro">
                 <div id="intro-text">
-                  <h1 class="name-text">Abraham-Trigs Bortey Danfa</H1>
-                    <article>
-
-                    </article>
+                  <h1 class="name-text">Abraham-Trigs Bortey Danfa</h1>
           
                   <h3>Creative Graphic Designer, Currently studying Front-End Development <br>
                       to blend creativity with Tech. 
@@ -73,7 +71,6 @@
         </p>
         <p>With these skills, I’m also ready to </p>
         <p>learn more.</p>
-        
 
       </article>
 
