same as previous in the html_basic dir update

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -9,7 +9,9 @@
   </head>
 
   <body>
-
+    <h1 class="name-text">
+      Abraham-Trigs Bortey Danfa
+    </h1>
     <header>
       <img src="logo on plain bg.png" alt="personal logo" class="header-logo">
 
@@ -34,7 +36,6 @@
             <section class="intro-positioner">
               <div id="intro">
                 <div id="intro-text">
-                  <h1 class="name-text">Abraham-Trigs Bortey Danfa</h1>
           
                   <h3>Creative Graphic Designer, Currently studying Front-End Development <br>
                       to blend creativity with Tech. 
