index.html updated

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -75,47 +75,48 @@
       </article>
 
       <aside>
-        <div>
-          <h2> Structured and Styled: </h2>
-          <p>My First Table Design</p>  
-        </div>
+        <p>Placeholder to add comment thread later.</p>
+      </aside>
+
+      <div>
+        <h2> Structured and Styled: </h2>
+        <p>My First Table Design</p>  
+      </div>
       
-        <div id="bottom-bg"></div>
+      <table>
+      <thead>
+        <tr id="th-Column">
+          <th>Name</th>
+          <th>Age</th>
+          <th>Country</th>
+        </tr>
+      </thead>
 
-        <table>
-        <thead>
-          <tr id="th-Column">
-            <th>Name</th>
-            <th>Age</th>
-            <th>Country</th>
-          </tr>
-        </thead>
+      <tbody>
+        <tr>
+          <td>John</td>
+          <td>25</td>
+          <td>USA</td>
+        </tr>
 
-        <tbody>
-          <tr>
-            <td>John</td>
-            <td>25</td>
-            <td>USA</td>
-          </tr>
+        <tr>
+          <td>Emily</td>
+          <td>28</td>
+          <td>Canada</td>
+        </tr>
 
-          <tr>
-            <td>Emily</td>
-            <td>28</td>
-            <td>Canada</td>
-          </tr>
+        <tr>
+          <td>Michael</td>
+          <td>32</td>
+          <td>Australia</td>
+        </tr>
 
-          <tr>
-            <td>Michael</td>
-            <td>32</td>
-            <td>Australia</td>
-          </tr>
-
-          <tr>
-            <td>Sophia</td>
-            <td>21</td>
-            <td>UK</td>
-          </tr>
-        </tbody>
+        <tr>
+          <td>Sophia</td>
+          <td>21</td>
+          <td>UK</td>
+        </tr>
+      </tbody>
       </table>      
 
     </main>
