same as last commit

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,55 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Abraham-Trigs Bortey Danfa - Creative Graphic Designer & Front-End Developer in Training. Explore my portfolio and hire me for design projects.">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Glory:wght@400;700&display=swap">
+  <link rel="stylesheet" href="styles.css">  <!-- Link external CSS -->
   <title>Abraham's Portfolio</title>
 </head>
 <body>
 
   <header>
-    <img src="logo on plain bg.png" alt="personal logo" class="header-logo">
+    <img src="logo on plain bg.png" alt="Personal Logo" class="header-logo">
     <nav>
       <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="/About">About</a></li>
-        <li><a href="/Contact">Contact</a></li>
-        <li><a href="./tweets.html">Tweet</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <article>
-      <h1>Abraham-Trigs Bortey Danfa</h1>
-      <div id="intro-container">
-        <section class="intro-positioner">
-          <div id="intro">
-            <div id="intro-text">
-              <h3>Creative Graphic Designer, Currently studying Front-End Development to blend creativity with Tech.</h3>
-            </div>
-            <div id="button-container">
-                <button class="button1">HIRE ME</button>
-                <button class="button2">VIEW PORTFOLIO</button>
-            </div>
-            <div id="personal-links">
-              <a href="linked-page" target="_blank"><img src="linkedin-logo.png" alt="LinkedIn Logo" class="linked-logo"></a>
-              <a href="X.png" target="_blank"><img src="x-logo.png" alt="Twitter/X Logo" class="linked-logo"></a>
-              <a href="Gmail-page" target="_blank"><img src="whatsapp.png" alt="WhatsApp Logo" class="linked-logo"></a>
-              <a href="Gmail-page" target="_blank"><img src="gmail-logo.png" alt="Gmail Logo" class="linked-logo"></a>
-            </div>
-          </div>
-        </section>
+      <h1>Welcome to My Portfolio</h1>
+      <h2>About Me</h2>
+      <p>My name is Abraham-Trigs Bortey Danfa, a creative graphic designer with a passion for blending creativity with technology. I am currently expanding my skills in Front-End Development to enhance my ability to create interactive and visually compelling digital experiences.</p>
+
+      <h2>My Journey</h2>
+      <p>With over eight years of experience in graphic design, I have worked on various projects, including branding, social media content, and digital marketing. My journey into front-end development allows me to bring my designs to life using modern web technologies.</p>
+
+      <h2>Skills & Expertise</h2>
+      <h3>Design & Development</h3>
+      <p>My expertise spans across multiple tools such as Adobe Photoshop, Illustrator, After Effects, and CorelDRAW. In addition, I am gaining proficiency in HTML, CSS, and JavaScript to build engaging and responsive web interfaces.</p>
+
+      <h3>Collaboration & Innovation</h3>
+      <p>Collaboration is at the heart of my work. I enjoy working with teams to brainstorm ideas and bring innovative solutions to life. My goal is to bridge the gap between design and technology to create seamless digital experiences.</p>
+
+      <h2>Let's Connect</h2>
+      <div id="button-container">
+          <button class="button1">HIRE ME</button>
+          <button class="button2">VIEW PORTFOLIO</button>
       </div>
-      <img src="Abraham.jpg" alt="My Picture" id="my-picture">
+
+      <h2>Follow Me</h2>
+      <div id="personal-links">
+        <a href="https://www.linkedin.com/in/abrahamdanfa" target="_blank"><img src="linkedin-logo.png" alt="LinkedIn Logo" class="linked-logo"></a>
+        <a href="https://twitter.com/yourprofile" target="_blank"><img src="x-logo.png" alt="Twitter/X Logo" class="linked-logo"></a>
+        <a href="https://wa.me/yourwhatsappnumber" target="_blank"><img src="whatsapp.png" alt="WhatsApp Logo" class="linked-logo"></a>
+        <a href="mailto:your-email@gmail.com"><img src="gmail-logo.png" alt="Gmail Logo" class="linked-logo"></a>
+      </div>
+      
+      <h2>Click the Image Below</h2>
+      <a href="https://www.alxafrica.com/" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+      </a>
+
     </article>
 
     <aside>
-      <p>Placeholder to add comment thread later.</p>
+      <p>Comment section coming soon!</p>
     </aside>
   </main>
 
   <footer>
-    <p>Made by Abraham Bortey Danfa - <a href="https://www.linkedin.com/in/abrahamdanfa" target="_blank">here</a>.</p>
+    <p>Made by Abraham Bortey Danfa - <a href="https://www.linkedin.com/in/abrahamdanfa" target="_blank">LinkedIn</a>.</p>
   </footer>
 
 </body>
