--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -47,6 +47,48 @@
     <aside>
       <p>Placeholder to add comment thread later.</p>
     </aside>
+
+    <table>
+      <thead>
+          <tr id="th-Column">
+              <th>Column 1</th>
+              <th>Column 2</th>
+              <th>Column 3</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+              <td>Row 1, Col 1</td>
+              <td>Row 1, Col 2</td>
+              <td>Row 1, Col 3</td>
+          </tr>
+
+          <tr>
+              <td>Row 2, Col 1</td>
+              <td>Row 2, Col 2</td>
+              <td>Row 2, Col 3</td>
+          </tr>
+
+          <tr>
+              <td>Row 3, Col 1</td>
+              <td>Row 3, Col 2</td>
+              <td>Row 3, Col 3</td>
+          </tr>
+
+          <tr>
+              <td>Row 4, Col 1</td>
+              <td>Row 4, Col 2</td>
+              <td>Row 4, Col 3</td>
+          </tr>
+
+          <tr>
+              <td>Row 5, Col 1</td>
+              <td>Row 5, Col 2</td>
+              <td>Row 5, Col 3</td>
+          </tr>
+      </tbody>
+    </table>      
+
   </main>
 
   <footer>
