index and tweet hmtl updated in html_basic dir

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,99 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Glory:wght@400;700&display=swap">
-  <title>Abraham's Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - Abraham's Website</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <header>
-    <nav>
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./tweets.html">Tweets</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <main>
+        <article>
+            <h1>Welcome to My Website</h1>
+            <h2>Exploring Web Development</h2>
+            <h3>Why I Love Front-End Development</h3>
 
-  <main>
-    <article>
-      <h1>Abraham-Trigs Bortey Danfa</h1>
-      <div id="intro-container">
-        <section class="intro-positioner">
-          <div id="intro">
-            <div id="intro-text">
-              <h3>Creative Graphic Designer, Currently studying Front-End Development to blend creativity with Tech.</h3>
-            </div>
-            <div id="button-container">
-                <button class="button1">HIRE ME</button>
-                <button class="button2">VIEW PORTFOLIO</button>
-            </div>
-            <div id="personal-links">
-              <a href="linked-page" target="_blank"><img src="linkedin-logo.png" alt="LinkedIn Logo" class="linked-logo"></a>
-              <a href="X.png" target="_blank"><img src="x-logo.png" alt="Twitter/X Logo" class="linked-logo"></a>
-              <a href="Gmail-page" target="_blank"><img src="whatsapp.png" alt="WhatsApp Logo" class="linked-logo"></a>
-              <a href="Gmail-page" target="_blank"><img src="gmail-logo.png" alt="Gmail Logo" class="linked-logo"></a>
-            </div>
-          </div>
-        </section>
-      </div>
-      <img src="Abraham.jpg" alt="My Picture" id="my-picture">
-    </article>
+            <p>Web development is an exciting field that allows me to create interactive and engaging experiences for users.</p>
+            <p>Learning HTML, CSS, and JavaScript has opened many opportunities for creativity and innovation.</p>
+            <p>Responsive design ensures that websites look great on all devices, making the user experience seamless.</p>
+            <p>With continuous learning, I aim to master front-end technologies and enhance my development skills.</p>
 
-    <aside>
-      <p>Placeholder to add comment thread later.</p>
-    </aside>
+            <a href="https://www.alxafrica.com/" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+            </a>
 
-    <table>
-      <thead>
-          <tr id="th-Column">
-              <th>Column 1</th>
-              <th>Column 2</th>
-              <th>Column 3</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <td>Row 1, Col 1</td>
-              <td>Row 1, Col 2</td>
-              <td>Row 1, Col 3</td>
-          </tr>
+            <h2>Learners' Table</h2>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Michael</td>
+                        <td>32</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+            </table>
+        </article>
 
-          <tr>
-              <td>Row 2, Col 1</td>
-              <td>Row 2, Col 2</td>
-              <td>Row 2, Col 3</td>
-          </tr>
+        <aside>
+            <p>Placeholder to add comment thread later.</p>
+        </aside>
+    </main>
 
-          <tr>
-              <td>Row 3, Col 1</td>
-              <td>Row 3, Col 2</td>
-              <td>Row 3, Col 3</td>
-          </tr>
-
-          <tr>
-              <td>Row 4, Col 1</td>
-              <td>Row 4, Col 2</td>
-              <td>Row 4, Col 3</td>
-          </tr>
-
-          <tr>
-              <td>Row 5, Col 1</td>
-              <td>Row 5, Col 2</td>
-              <td>Row 5, Col 3</td>
-          </tr>
-      </tbody>
-    </table>      
-
-  </main>
-
-  <footer>
-    <p>Made by Abraham Bortey Danfa - <a href="https://www.linkedin.com/in/abrahamdanfa" target="_blank">here</a>.</p>
-  </footer>
-
+    <footer>
+        <p>Made by Abraham Bortey Danfa - <a href="https://www.linkedin.com/in/abrahamdanfa" target="_blank">here</a>.</p>
+    </footer>
 </body>
 </html>
