--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,35 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abraham's X Post</title>
+    <title>Abraham's Tweets</title>
 </head>
 <body>
-
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./tweets.html">Tweets</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <article>
+            <h1>My Latest Tweet</h1>
             <blockquote class="twitter-tweet">
-                <p lang="en" dir="ltr">Lost in the dark, but found the light of innovation. ✨💡 This striking scene was brought to life using an AI model! 
-                  <a href="https://twitter.com/hashtag/alxAfrica?src=hash&amp;ref_src=twsrc%5Etfw">#alxAfrica</a> 
-                  <a href="https://t.co/ceLSLPvinA">pic.twitter.com/ceLSLPvinA</a>
+                <p lang="en" dir="ltr">
+                    Lost in the dark, but found the light of innovation. ✨💡 This striking scene was brought to life using an AI model!
+                    <a href="https://twitter.com/hashtag/alxAfrica?src=hash&amp;ref_src=twsrc%5Etfw">#alxAfrica</a>
+                    <a href="https://twitter.com/hashtag/ALXGhana?src=hash&amp;ref_src=twsrc%5Etfw">#ALXGhana</a>
+                    <a href="https://twitter.com/hashtag/ALXAfrica?src=hash&amp;ref_src=twsrc%5Etfw">#ALXAfrica</a>
+                    <a href="https://twitter.com/hashtag/ALXDareToBeMore?src=hash&amp;ref_src=twsrc%5Etfw">#ALXDareToBeMore</a>
+                    <a href="https://twitter.com/hashtag/DoHardThings?src=hash&amp;ref_src=twsrc%5Etfw">#DoHardThings</a>
+                    <a href="https://twitter.com/hashtag/ALXAIStarterKit?src=hash&amp;ref_src=twsrc%5Etfw">#ALXAIStarterKit</a>
+                    <a href="https://twitter.com/hashtag/ALX?src=hash&amp;ref_src=twsrc%5Etfw">#ALX</a>
+                    <a href="https://twitter.com/hashtag/ALX_SE?src=hash&amp;ref_src=twsrc%5Etfw">#ALX_SE</a>
+                    <a href="https://twitter.com/hashtag/Mastercard?src=hash&amp;ref_src=twsrc%5Etfw">#Mastercard</a>
+                    <a href="https://twitter.com/julienbarbier42?ref_src=twsrc%5Etfw">@julienbarbier42</a>
+                    <a href="https://twitter.com/AlxGhana?ref_src=twsrc%5Etfw">@AlxGhana</a>
+                    @alxAfrica
+                    <a href="https://t.co/ceLSLPvinA">pic.twitter.com/ceLSLPvinA</a>
                 </p>
-                — Abraham-trigs (@trigs_98) 
+                — Abraham-trigs (@trigs_98)
                 <a href="https://twitter.com/trigs_98/status/1893065918952976871?ref_src=twsrc%5Etfw">February 21, 2025</a>
             </blockquote>
-
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>    
-
-            <p><a href="./index.html">← Back to Home</a></p>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </article>
 
         <aside>
@@ -42,6 +49,5 @@
     <footer>
         <p>Made by Abraham Bortey Danfa - <a href="https://www.linkedin.com/in/abrahamdanfa" target="_blank">here</a>.</p>
     </footer>
-
 </body>
 </html>
