index.html in portfolio dir updated

--- a/portfolio/aboutMe.html
+++ b/portfolio/aboutMe.html
@@ -3,69 +3,69 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Abraham Bortey Danfa - Personal Portfolio</title>
     <link rel="stylesheet" href="aboutme.css">
   </head>
 
   <body>
     <header>
+      <h1>Abraham Bortey Danfa</h1>
+      <p>Creative Graphic Designer & Front-End Developer</p>
       <img src="logo on plain bg.png" alt="personal logo" class="header-logo">
 
       <nav>
         <ul>
-          <li><a href="/Home">Home</a></li>
-          <li><a href="/About">About</a></li>
-          <li><a href="/Contact">Contact</a></li>
-          <li><a href="/Project">Blog</a></li>
+          <li><a href="#introduction">Introduction</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
 
     <!-- .......................INTRODUCTION SECTION....................... -->
-    <main>
-      <div id="intro">
-        <h2>Creativity is REAL, but <br>
-          only when it creates a SOLUTION 
-        </h2>
-        <h1>FOR HUMANITY</h1>
-      </div>
+    <section id="introduction">
+      <h2>Introduction</h2>
+      <p>
+        Creativity is REAL, but only when it creates a SOLUTION FOR HUMANITY.
+      </p>
+    </section>
 
+    <!-- .......................ABOUT ME SECTION....................... -->
+    <section id="about">
+      <h2>About Me</h2>
       <article class='article'>
-        <section id="down-section-2">
-          <h3>ABOUT ME</h3>
-          <p><strong class="big-i">I'</strong>m a creative graphic designer with over eight years of experience in crafting innovative visuals for print media, websites, and social media.
-
-            With expertise in design software like Adobe Photoshop, Illustrator, After Effects, and CorelDRAW, I specialize in delivering high-quality designs with precise attention to detail and consistency under tight deadlines.
-
-            Having completed a Professional Foundation course, I’m now advancing my skills in Front-End Development, focusing on technologies that merge design with web and mobile applications. This progression enables me to contribute to projects that blend creativity with technical expertise.
-
-            Driven by passion, adaptability, and a commitment to staying ahead of industry trends, I’m eager to connect, collaborate, and contribute to exciting new projects that require a blend of design and technology.
-          </p>
-        </section>
+        <p><strong class="big-i">I'</strong>m a creative graphic designer with over eight years of experience in crafting innovative visuals for print media, websites, and social media.</p>
+        <p>With expertise in design software like Adobe Photoshop, Illustrator, After Effects, and CorelDRAW, I specialize in delivering high-quality designs with precise attention to detail and consistency under tight deadlines.</p>
+        <p>Having completed a Professional Foundation course, I’m now advancing my skills in Front-End Development, focusing on technologies that merge design with web and mobile applications. This progression enables me to contribute to projects that blend creativity with technical expertise.</p>
+        <p>Driven by passion, adaptability, and a commitment to staying ahead of industry trends, I’m eager to connect, collaborate, and contribute to exciting new projects that require a blend of design and technology.</p>
         <img src="Abraham.jpg" alt="my picture" id="my-picture">
       </article>
+    </section>
 
-      <!-- .......................PROJECTS SECTION....................... -->
-      <section id="projects">
-        <h2>Projects</h2>
+    <!-- .......................PROJECTS SECTION....................... -->
+    <section id="projects">
+      <h2>Projects</h2>
 
-        <article class="project">
-          <h3>FES-Manager</h3>
-          <p>A platform designed to streamline financial and educational support for students, donors, and schools.</p>
-          <a href="https://github.com/yourgithub/fes-manager" target="_blank">View Project</a>
-        </article>
+      <article class="project">
+        <h3>FES-Manager</h3>
+        <p>A platform designed to streamline financial and educational support for students, donors, and schools.</p>
+        <a href="https://github.com/yourgithub/fes-manager" target="_blank">View Project</a>
+      </article>
 
-        <article class="project">
-          <h3>Street Hawkers App</h3>
-          <p>An app aimed at helping street hawkers expand their customer base and enhance business efficiency.</p>
-          <a href="https://github.com/yourgithub/street-hawkers-app" target="_blank">View Project</a>
-        </article>
-      </section>
+    </section>
 
-    </main>
+    <!-- .......................CONTACT SECTION....................... -->
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/abrahamdanfa" target="_blank">View Profile</a></p>
+      <p>GitHub: <a href="https://github.com/yourgithub" target="_blank">View Projects</a></p>
+    </section>
 
+    <!-- .......................FOOTER....................... -->
     <footer>
-      <p>Made by Abraham Bortey Danfa - <a href="https://www.linkedin.com/in/abrahamdanfa" target="_blank">here</a></p>
+      <p>&copy; 2024 Abraham Bortey Danfa. All Rights Reserved.</p>
     </footer>
 
   </body>
