all css and navigation updated

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -3,22 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let's Connect</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="contact.css">
   </head>
 
   <body>
     <header>
-      <img src="logo on plain bg.png" alt="personal logo" class="header-logo">
 
-      <nav>
-        <ul>
-          <li href="/Home">Home</li>
-          <li href="/About">About</li>
-          <li href="/Contact">Contact</li>
-          <li href="/Project">Blog</li>
-        </ul>
-      </nav>
+      <div class="top-nav">
+        <img src="MyLogo.png" alt="Personal Logo" class="header-logo">
+        <nav>
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./aboutMe.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+          </ul>
+        </nav>  
+      </div>
+  
     </header>
 
     <h1 class="headen">
