second logo import andplaced beside form

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -33,7 +33,7 @@
       <section id="down-section-2">
 
         <span id="connecting-logos">
-          <a href="linkedin.com"> <img src="logo on plain bg.png" alt="my-logo" target="_blank" class="header-logo2"> </a>
+          <a href="linkedin.com"> <img src="MyLogo.png" alt="my-logo" target="_blank" class="header-logo2"> </a>
           <div><button>Click to connect</button></div>
 
           <div id="personal-links">
