--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abraham's Tweets</title>
+    <link rel="stylesheet" href="tweets.css">
 </head>
 <body>
     <header>
