implemented error - Checks for implementation of header section with [ <meta charset=utf-8>, <title>, Personal Portfolio]

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
   <header>
+    <meta charset="UTF-8">
+    <title>Abraham Bortey Danfa - Personal Portfolio</title>
+
+
     <div class="top-nav">
       <img src="MyLogo.png" alt="Personal Logo" class="header-logo">
       
