utf-8 initially wasuppercase but changed to lower case to meet requirement

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Glory:wght@400;700&display=swap">
   <title>Abraham Bortey Danfa - Personal Portfolio</title>
@@ -9,10 +9,7 @@
 </head>
 <body>
   <header>
-    <meta charset="UTF-8">
-    <title>Abraham Bortey Danfa - Personal Portfolio</title>
-
-
+    
     <div class="top-nav">
       <img src="MyLogo.png" alt="Personal Logo" class="header-logo">
       
