h1 tag addedto header

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,30 +9,19 @@
 </head>
 <body>
   <header>
-    
+    <h1>Abraham Bortey Danfa - Personal Portfolio</h1> <!-- Add this line -->
     <div class="top-nav">
       <img src="MyLogo.png" alt="Personal Logo" class="header-logo">
-      
       <nav>
-
         <ul>
           <li><a href="#introduction">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-
       </nav>
     </div>
-
-    <div class="greet">
-      <h3>Front-End Development Enthusiast.</h3>
-      <h2>Creative Graphic Designer.</h2>
-      <p>Blending creativity with technology to craft impactful digital experiences.</p>
-    </div>
-
   </header>
-
   <main>
     <section id="introduction">
       <h2>Introduction</h2>
